test/scc/pp/errors/041.a
041.t:1:2: error: unterminated #ifndef